src/objects/cb5__CBClusterRule__c.object
<CustomObject>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>R-{00}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__Level1__c</fullName>
        <defaultValue>&apos;cb5__CBDivision__c&apos;</defaultValue>
        <description>The name of sObject</description>
        <label>Level1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Level2__c</fullName>
        <description>The name of the second sObject that should group the clusters</description>
        <label>Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Level3__c</fullName>
        <description>The name of the second sObject that should group the clusters</description>
        <label>Level3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CB Cluster Rule</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__Index__c</columns>
        <columns>cb5__Level1__c</columns>
        <columns>cb5__Level2__c</columns>
        <columns>cb5__Level3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Cluster Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Cluster Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>